# nertc-iot-demo

beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/: CMakeLists.txt  Kconfig
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/: README.md
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/cmake/: CMakeLists.txt  cmake_build.sh
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/cmake/cmake_cross_config/: android_arm64_toolchain.cmake  android_armeabiv7a_toolchain.cmake  android_x86_toolchain.cmake  linux_arm_toolchain.cmake  linux_x86_64_toolchain.cmake  windows_x86_64_toolchain.cmake
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/inc/func/: asr.h  chat_module_config.h  chat_state_machine.h  llm_generate.h  tts.h  voice_chat.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/inc/system_adapter/: audio_buffer_play.h  audio_recorder.h  lingxin_auth_config.h  lingxin_http.h  lingxin_semaphore.h  lingxin_websocket.h  local_audio_play.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/libs/libwebsockets_4.3.0/linux_arm/include/: lws_config.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/libs/libwebsockets_4.3.0/linux_x86_64/include/: lws_config.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/libs/libwebsockets_4.3.0/windows/include/: lws_config.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/asr/: asr.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/cjson/: cJSON.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/inc/: lingxin_common.h  lingxin_json_util.h  lingxin_tls_utils.h  voice_chat_manager.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/llm/: image_generate.c  text_generate.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/net/http/: lingxin_http_lws.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/net/websocket/: lingxin_websocket_lws.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/tts/: tts.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/utils/: common.c  event_queue.c  json_util.c  tls_utils.c  voice_queue.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/src/voice_chat/: chat_protocol.c  chat_state_machine.c  voice_chat_manager.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/third_library/libwebsockets-4.3.0/: CMakeLists.txt  cmake_build.sh  cmake_build_config.cmake
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/third_library/libwebsockets-4.3.0/cmake_cross_config/: android_arm64_toolchain.cmake  android_armeabiv7a_toolchain.cmake  android_x86_toolchain.cmake  common_options.cmake  linux_arm_toolchain.cmake  linux_x86_64_toolchain.cmake  windows_x86_64_toolchain.cmake
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/third_library/libwebsockets-4.3.0/lib/core/: libwebsockets.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/third_library/mbedtls-2.26.0/: README_IOT_SDK.md  cmake_build.sh
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/third_library/mbedtls-2.26.0/cmake_cross_config/: android_arm64_toolchain.cmake  android_armeabiv7a_toolchain.cmake  android_x86_toolchain.cmake  linux_arm_toolchain.cmake  linux_x86_64_toolchain.cmake
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/AI2T_LingXinEngine/third_library/mbedtls-2.26.0/configs/: config_iot_sdk.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/adapter_LingXin/audio_buffer/: audio_buffer_play_custom.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/adapter_LingXin/auth/: auth_config.c  auth_config.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/adapter_LingXin/local_audio/: local_audio_play.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/adapter_LingXin/net/: websocket_custom.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/adapter_LingXin/record/: audio_record_custom.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/LingXin_AI_IoT_VoiceChatEngine/adapter_LingXin/semaphore/: lingxin_semaphore.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/agora-iot-sdk/: CMakeLists.txt
beken/bk_aidk/bk_avdk/components/bk_thirdparty/agora-iot-sdk/include/bk7258/: agora_rtc_api.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/aliyun_sdk/: CMakeLists.txt  Kconfig  hal_util_mem.c  hal_util_mutex.c  hal_util_random.c  hal_util_storage.c  hal_util_time.c
beken/bk_aidk/bk_avdk/components/bk_thirdparty/aliyun_sdk/include/: lib_c_sdk.h  lib_c_storage.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/aliyun_sdk/include/c_utils/: c_utils.h  hal_util_mem.h  hal_util_mutex.h  hal_util_random.h  hal_util_storage.h  hal_util_time.h  util_list.h  util_log.h  util_ringbuffer.h  util_string.h  util_type_trans.h
beken/bk_aidk/bk_avdk/components/bk_thirdparty/nertc_sdk/: CMakeLists.txt  Kconfig
beken/bk_aidk/components/bk_tflite_micro/: CMakeLists.txt
beken/bk_aidk/components/bk_tflite_micro/tflite-micro/: Kconfig
esp32/nertc_demo/components/nertc_wake_up/: CMakeLists.txt
(+1402 files in other folders)
